<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"


    >



    <TextView
        android:layout_width="match_parent"
        android:text="@string/new_password"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <EditText
        android:id="@+id/email"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"/>




    <ImageView
        android:id="@+id/codeImage"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:src="@drawable/ic_code1"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/new_code"
            android:text="@string/new_code"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/code"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/code"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="64dp" />
</LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/confirn_new_password"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:background="@drawable/button"

        />



</LinearLayout>
