<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <EditText
        android:id="@+id/username"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <EditText
        android:id="@+id/password"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <EditText
        android:id="@+id/otp"
        android:minHeight="?android:listPreferredItemHeight"
        android:hint="@string/otp"
        android:layout_width="match_parent"
        android:layout_height="64dp" />



        </LinearLayout>



</LinearLayout>